--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,8 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.201</strong> - 01/07/2025</dt>
+    <dd>Updated name to Primeval Arcana</dd>
     <dt><strong>Version 1.200</strong> - 09/08/2024</dt>
     <dd>Upgraded from Angular 9 to Angular 18</dd>
     <dt><strong>Version 1.105</strong> - 07/29/2024</dt>
