Finalizing Name Update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar id="navigation">
-      <a id="site-title" routerLink="/">Primeval Arcana Character Sheet
+      <a id="site-title" routerLink="/">Primeval Arcana ICS
         <span class="version">v{{gameService.version}}</span>
       </a>
 
@@ -58,7 +58,7 @@
       </div>
     </div>
     <mat-toolbar id="footer">
-      <a routerLink="/">Primeval Arcana Character Sheet</a>
+      <a routerLink="/">Revived Character Sheet</a>
       <small id="copyright">Copyright &copy; {{year}} Justin Edwards. All Rights Reserved. (for now)</small>
       <a id="github-logo" href="https://github.com/xrnm/odnd-character-sheet"><img
         src="/assets/images/github_logo.png"/>GitHub</a>
