--- a/src/app/hirelings/hirelings.component.html
+++ b/src/app/hirelings/hirelings.component.html
@@ -3,6 +3,9 @@
     <button class='add-hireling-button' color="primary" mat-mini-fab (click)="addHireling()">
       <mat-icon>add</mat-icon>
     </button>
+    <button class='add-hireling-button' color="primary" mat-mini-fab (click)="generateHireling()">
+      <mat-icon>casino</mat-icon>
+    </button>
     <button class='add-hireling-button' color="primary" mat-mini-fab (click)="uploader.click()">
       <mat-icon>arrow_upwards</mat-icon>
     </button>
