--- a/src/app/show-character/character-inventory/character-inventory.component.sass
+++ b/src/app/show-character/character-inventory/character-inventory.component.sass
@@ -14,6 +14,11 @@ button.edit-item-button mat-icon
 .overfull
   text-decoration: line-through
 
+.add-item
+  text-align: center
+  button
+    margin-top: 16px
+
 @media screen and (max-width: 1200px)
   #inventory
     mat-card
